--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -6,5 +6,7 @@
       <%= render(:partial => "select_categories") %>
     </div>
   </div>
-  <%= f.primary t('button_create') %>
+  <%= f.actions do %>
+    <%= f.primary t('button_create') %>
+  <% end %>
 <% end %>
