--- a/app/views/exchanges/_exchange_offer_form.html.erb
+++ b/app/views/exchanges/_exchange_offer_form.html.erb
@@ -14,7 +14,9 @@
       <%= select_tag 'offer[count]', options_for_select(Array.new(@offer.available_count) {|i| [i+1, i+1]} ) %>
     </div>
   <% end %>
-  <%= f.primary t('button_submit') %><%= waiting_image %>
+  <%= f.actions do %>
+    <%= f.primary t('button_submit') %><%= waiting_image %>
+  <% end %>
 <% end %>
 
 <script>
