--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -17,5 +17,7 @@
         <%= f.text_area :content, :id => "message_body", :rows => 10 %>
         <%= set_focus_to "message_subject" %>
       <%- end -%>
-      <%= f.primary t('button_send'), :id => "message_submit" %><%= waiting_image %>
+      <%= f.actions do %>
+        <%= f.primary t('button_send'), :id => "message_submit" %><%= waiting_image %>
+      <% end %>
   <% end %>
