--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -3,6 +3,8 @@
 <%= bootstrap_form_for @photo, :html => { :multipart => true } do |f| -%>
 
   <%= f.file_field :picture, label: t('groups.new_photo.upload_a_photo') %>
-  <%= f.primary "Upload" %>
-  <%= f.submit "Cancel", :id => "cancel", :class => "btn" %>
+  <%= f.actions do %>
+    <%= f.primary "Upload" %>
+    <%= f.submit "Cancel", :id => "cancel", :class => "btn" %>
+  <% end %>
 <% end -%>
