--- a/app/views/addresses/_form.html.erb
+++ b/app/views/addresses/_form.html.erb
@@ -1,4 +1,4 @@
-  <%= form.form_group :address_privacy do %>
+  <%= form.control_group :address_privacy do %>
     <% if @address.new_record? %>
       <%= form.check_box :address_privacy, checked: @current_person.org? ? true : false, label: t('addresses.form.share_address') %>
     <% else %>
@@ -14,7 +14,7 @@
 
   <%= form.text_field :city, label: t('addresses.form.city') %>
 
-  <%= form.form_group do %>
+  <%= form.control_group do %>
     <%= form.select :state_id, @states, label: {text: t('addresses.form.state')}, include_blank: true %>
   <% end %>
 
