--- a/app/views/addresses/edit.html.erb
+++ b/app/views/addresses/edit.html.erb
@@ -3,7 +3,9 @@
 
   <%= bootstrap_form_for @address, :url => person_address_path(current_person,@address), :html => {:method => :put} do |form| %>
     <%= render :partial => 'form', :object => form %>
-    <%= form.primary t('button_update') %>
+    <%= form.actions do %>
+      <%= form.primary t('button_update') %>
+    <% end %>
   <% end %>
 <% end %>
 
