--- a/app/views/exchanges/_exchange_form.html.erb
+++ b/app/views/exchanges/_exchange_form.html.erb
@@ -15,6 +15,8 @@
         </div>
       </div>
     <% end %>
-    <%= f.primary t('button_submit') %><%= waiting_image %>
+    <%= f.actions do %>
+      <%= f.primary t('button_submit') %><%= waiting_image %>
+    <% end %>
   </div>
   <% end %>
