--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -23,22 +23,22 @@
               <%= f.text_field :asset, disabled: !@group.asset.nil?, label: t('.asset'), class: "span3" %>
               <%= f.text_field :default_credit_limit, label: t('.default_credit_limit'), size: 5, class: "span3" %>
 
-              <%= f.form_group :display_balance do %>
+              <%= f.control_group :display_balance do %>
                 <%= f.check_box :display_balance, label: t('.display_balance') %>
               <% end -%>
-              <%= f.form_group :display_earned do %>
+              <%= f.control_group :display_earned do %>
                 <%= f.check_box :display_earned, label: t('.display_earned') %>
               <% end -%>
-              <%= f.form_group :display_paid do %>
+              <%= f.control_group :display_paid do %>
                 <%= f.check_box :display_paid, label: t('.display_paid') %>
               <% end -%>
-              <%= f.form_group :private_txns do %>
+              <%= f.control_group :private_txns do %>
                 <%= f.check_box :private_txns, label: t('.private_txns') %>
               <% end -%>
 
             <%- end -%>
 
-            <%= f.form_group :enable_forum do %>
+            <%= f.control_group :enable_forum do %>
               <%= f.check_box :enable_forum, label: t('.enable_forum') %>
             <% end -%>
 
@@ -46,7 +46,9 @@
 
           </div>
         </div>
-        <%= f.primary t('button_update') %>
+        <%= f.actions do %>
+          <%= f.primary t('button_update') %>
+        <% end %>
       </fieldset>
     <% end %>
   </div>
@@ -83,29 +85,33 @@
     <%= bootstrap_form_for(@group.privacy_setting, remote: true) do |f| %>
       <legend><%= t('groups.edit.privacy') %></legend>
       <div id='privacy_setting_admin'></div>
-      <%= f.form_group :viewable_reqs do %>
+      <%= f.control_group :viewable_reqs do %>
         <%= f.check_box :viewable_reqs, label: t('privacy_settings.edit.viewable_requests') %>
       <%- end -%>
-      <%= f.form_group :viewable_offers do %>
+      <%= f.control_group :viewable_offers do %>
         <%= f.check_box :viewable_offers, label: t('privacy_settings.edit.viewable_offers') %>
       <%- end -%>
-      <%= f.form_group :viewable_forum do %>
+      <%= f.control_group :viewable_forum do %>
         <%= f.check_box :viewable_forum, label: t('privacy_settings.edit.viewable_forum') %>
       <%- end -%>
-      <%= f.form_group :viewable_members do %>
+      <%= f.control_group :viewable_members do %>
         <%= f.check_box :viewable_members, label: t('privacy_settings.edit.viewable_members') %>
       <%- end -%>
-      <%= f.primary t('button_update') %>
+      <%= f.actions do %>
+        <%= f.primary t('button_update') %>
+      <% end %>
     <% end %>
 
     <% if @group.enable_forum and @group.privacy_setting.viewable_forum? %>
       <%= bootstrap_form_for(@group.forum, remote: true) do |f| %>
         <legend><%= t('.forum') %></legend>
         <div id='forum_admin'></div>
-        <%= f.form_group :worldwritable do %>
+        <%= f.control_group :worldwritable do %>
           <%= f.check_box :worldwritable, label: t('forums.edit.world_writable') %>
         <% end -%>
-        <%= f.primary t('button_update') %>
+        <%= f.actions do %>
+          <%= f.primary t('button_update') %>
+        <% end %>
       <% end %>
 
     <% end %>
