--- a/app/views/oauth_clients/new.html.erb
+++ b/app/views/oauth_clients/new.html.erb
@@ -1,5 +1,7 @@
 <h1>Register a new application</h1>
 <%= bootstrap_form_for @client_application, :url => { :action => :create } do |f| %>
   <%= render :partial => "form", :locals => { :f => f } %>
-  <%= f.primary t('button_create') %>
+  <%= f.actions do %>
+    <%= f.primary t('button_create') %>
+  <% end %>
 <% end %>
