--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -54,7 +54,7 @@
 
   <%= f.text_field :zipcode, label: t('people.new.zipcode') %>
 
-    <%= f.form_group :org do %>
+    <%= f.control_group :org do %>
       <%= f.check_box :org, label: t('people.new.business_account') %>
     <% end %>
     <div id="business_info">
@@ -66,10 +66,12 @@
           </div>
         </div>
     </div>
-    <%= f.form_group :accept_agreement do %>
+    <%= f.control_group :accept_agreement do %>
       <%= f.check_box :accept_agreement, label: member_agreement_label.html_safe  %> 
     <% end %>
 
-    <%= f.primary t('people.new.signup_button') %>
+    <%= f.actions do %>
+      <%= f.primary t('people.new.signup_button') %>
+    <% end %>
 </div>
   <% end %>
