--- a/app/views/reqs/_form_fields.html.erb
+++ b/app/views/reqs/_form_fields.html.erb
@@ -22,14 +22,16 @@
     </div>
   </div>
   <% if notify_members %>
-    <%= f.form_group :notifications, label: {text: t('reqs.new.notify_members_email')} do %>
+    <%= f.control_group :notifications, label: {text: t('reqs.new.notify_members_email')} do %>
     <%= f.check_box :notifications, checked: true %>
   <% end %>
   <% end %>
   <% if PublicBid.open? %>
-    <%= f.form_group :fadsfdasf, label: {text: t('reqs.new.public_bid')} do %>
+    <%= f.control_group :fadsfdasf, label: {text: t('reqs.new.public_bid')} do %>
       <%= f.check_box :public_bid, checked: f.object.public_bid || false %>
     <% end %>
   <% end %>
-  <%= f.submit submit_text %><%= waiting_image %>
+  <%= f.actions do %>
+    <%= f.primary submit_text %><%= waiting_image %>
+  <% end %>
 </div>
