--- a/app/views/shared/_bid_form.html.erb
+++ b/app/views/shared/_bid_form.html.erb
@@ -2,5 +2,7 @@
     <%= f.text_field :estimated_hours, :value => nice_decimal(f.object.estimated_hours),  label: t('estimate'), help: @req.unit, size: 2 %>
     <%= f.text_field :expiration_date, label: t('expiration_date'), size: 8 %>
     <%= f.text_area :private_message_to_requestor, label: t('reqs.show.private_message_to_requestor'), rows: 5 %>
-    <%= f.primary t('button_submit') %><%= waiting_image %>
+    <%= f.actions do %>
+      <%= f.primary t('button_submit') %><%= waiting_image %>
+    <% end %>
 <% end %>
