--- a/app/views/shared/_post_form.html.erb
+++ b/app/views/shared/_post_form.html.erb
@@ -4,5 +4,7 @@
   <%= bootstrap_form_for @post, :url => forum_topic_posts_path(@forum, @topic), :html => {:id => 'new_post', :class => 'form-horizontal'}  do |f| %>
     <%= f.text_area :body, :label => :none, :rows => 10 %>
 
-    <%= f.primary t('button_submit') %>
+    <%= f.actions do %>
+      <%= f.primary t('button_submit') %>
+    <% end %>
   <% end %>
