--- a/app/views/reqs/_form_fields.html.erb
+++ b/app/views/reqs/_form_fields.html.erb
@@ -11,6 +11,7 @@
 </div>
 <div class="span5">
   <%= f.text_field :estimated_hours, :value=> nice_decimal(f.object.estimated_hours), :label => t('estimated') + ' ' + t('payment'), :help => @group.unit || Group.find(global_prefs.default_group_id).unit, :size => 5, :disabled => estimate_disabled %>
+  <%= f.text_field :respond_by_date, :label => t('respond_by'), :size => 7 %>
   <%= f.text_field :due_date, :label => t('due_date'), :size => 7 %>
   <%= f.fields_for :photos do |i| %>
       <%= i.file_field :picture, label: t('groups.new_photo.upload_a_photo') %>
