--- a/app/views/shared/_powered_by.html.erb
+++ b/app/views/shared/_powered_by.html.erb
@@ -1,5 +1,5 @@
 <p class="poweredby">
-  <a href="http://insoshi.com/">
+  <a href="https://github.com/insoshi/insoshi">
     <%= image_tag "powered_by_insoshi_lightbg.png" %>
   </a>
 </p>
