--- a/app/views/bids/_bid.html.erb
+++ b/app/views/bids/_bid.html.erb
@@ -12,21 +12,25 @@
     <%= image_link bid.person, :image => :thumbnail %>
     <%= image_tag "icons/new.gif", :class => "icon", :alt => "Bid" %>
   </div>
-  <%= form_for :bid, :url => req_bid_path(bid.req, bid), :html => {:method => :put, :class => 'edit_bid'} do |f| %>
-  <% if current_person?(bid.req.person) && bid.requestor_event_for_current_state %>
-    <%= hidden_field_tag :aasm_event, bid.requestor_event_for_current_state %>
-    <%= f.submit bid.requestor_event_for_current_state %><%= waiting_image %>
-  <% elsif current_person?(bid.person) && bid.bidder_event_for_current_state %>
-    <%= hidden_field_tag :aasm_event, bid.bidder_event_for_current_state %>
-    <%= f.submit bid.bidder_event_for_current_state %><%= waiting_image %>
+  <% if bid.req %>
+    <% if (dashboard rescue false) %><%= t('for') %> <%= link_to h(bid.req.name), bid.req, :class => "show-follow" %><% end %>
+    <%= form_for :bid, :url => req_bid_path(bid.req, bid), :html => {:method => :put, :class => 'edit_bid'} do |f| %>
+      <% if current_person?(bid.req.person) && bid.requestor_event_for_current_state %>
+        <%= hidden_field_tag :aasm_event, bid.requestor_event_for_current_state %>
+        <%= f.submit bid.requestor_event_for_current_state, class: 'btn bid-action' %><%= waiting_image %>
+      <% elsif current_person?(bid.person) && bid.bidder_event_for_current_state %>
+        <%= hidden_field_tag :aasm_event, bid.bidder_event_for_current_state %>
+        <%= f.submit bid.bidder_event_for_current_state, class: 'btn bid-action' %><%= waiting_image %>
+      <%- end -%>
+    <%- end -%>
   <%- end -%>
-<%- end -%>
   <p>
   <%= h bid.unit %> <%= t('bid') %>: <%= h bid.estimated_hours %> - <%= t('bids.bid.expires') %> <%= relative_time_ago_in_words(bid.expiration_date) %>
   </p>
   <p class="meta">
-<% if bid.state != 'offered' %><%= t('bids.bid.accepted') %> <%= t( 'ago_time', :date => time_ago_in_words(bid.accepted_at)) -%> <br><% end %>   <%= t('bids.bid.submitted_by') %> <%= person_link bid.person %>
+  <% if bid.state != 'offered' %><%= t('bids.bid.accepted') %> <%= t( 'ago_time', :date => time_ago_in_words(bid.accepted_at)) -%> <br><% end %>   <%= t('bids.bid.submitted') %><% unless (dashboard rescue false) %><%= t('by') %> <%= person_link bid.person %><% end %>
   <%= t( 'ago_time', :date => time_ago_in_words(bid.created_at)) %>
+  <% if bid.req %>
     <% if can? :destroy, bid -%>
       | <%= link_to t('button_delete'), req_bid_path(bid.req,bid), :class => 'delete_bid' %>
     <% end -%>
@@ -34,6 +38,7 @@
     <% if current_person?(bid.req.person) && !current_person.address.nil? && !bid.person.address.nil? && !current_person?(bid.person) -%>
       <%= number_with_precision(bid.person.address.distance_to(current_person.address), :precision => 1).to_s %> <%= t('miles_away') %>
     <% end -%>
+  <% end -%>
   </p>
 </li>
 <% end %>
