--- a/app/views/groups/_membership.html.erb
+++ b/app/views/groups/_membership.html.erb
@@ -4,7 +4,9 @@
   <%= link_to t('groups.show.join_group'),group_memberships_path(@group), {:id => 'join_group'} %>
   </li>
   <li class="add_to_memberships <%= @membership_display %>">
+    <%- unless Membership.pending?(current_person, @group) -%>
     <%= t('groups.show.you_are_a_member_of') %> <strong><%= h @group.name%></strong>
+    <% end %>
     <br />
     <% unless @group.default_group? %>
       <% if Membership.exist?(current_person, @group) %>
