--- a/app/views/groups/_toolbox.html.erb
+++ b/app/views/groups/_toolbox.html.erb
@@ -12,7 +12,7 @@
           <li>
             <%= t('groups.show.your_credit_limit') %>
             <%= nice_decimal(@membership.account.credit_limit) %>
-            <%= @group.unit %>
+            <%= @group.unit.pluralize %>
           </li>
         <%- end -%>
       <%- else -%>
@@ -20,7 +20,7 @@
           <li>
             <%= t('groups.show.default_credit_limit') %>
             <%= nice_decimal(@group.default_credit_limit) %>
-            <%= @group.unit %>
+            <%= @group.unit.pluralize %>
           </li>
         <%- end -%>
       <%- end -%>
