--- a/app/views/exchanges/_exchange_form.html.erb
+++ b/app/views/exchanges/_exchange_form.html.erb
@@ -6,7 +6,7 @@
     <%- if @customer_id.present? %>
       <%= f.hidden_field :customer_id, :value => @customer_id %>
     <%- end %>
-    <%= f.text_field :amount, :value=> nice_decimal(f.object.amount), label: t('exchanges.new.amount'), help: @group.unit, size: 2 %>
+    <%= f.text_field :amount, :value=> nice_decimal(f.object.amount), label: t('exchanges.new.amount'), help: @group.unit.pluralize, size: 2 %>
     <%= fields_for :req do |r| %>
       <div class="control-group">
         <%= r.label t('exchanges.new.service_provided'), :class => 'control-label' %>
