--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -30,7 +30,7 @@
     <% end %>
 
     <fieldset id="currency_fields">
-      <%= f.text_field :unit, label: t('groups.new.currency_unit_plural'), disabled: true %>
+      <%= f.text_field :unit, label: t('groups.new.currency_unit_singular'), disabled: true %>
       <%= f.text_field :asset, label: t('groups.new.asset'), size: 8, disabled: true %>
       <%= f.text_field :default_credit_limit, label: t('groups.new.default_credit_limit'), size: 5, disabled: true %>
       <%= f.control_group :private_txns do %>
