--- a/app/views/shared/_exchange.html.erb
+++ b/app/views/shared/_exchange.html.erb
@@ -7,7 +7,7 @@
   <% if exchange.group.nil? %>
     <%= person_link exchange.customer %><%= " paid #{ nice_decimal(exchange.amount)} hours for " %><%= link_to h(exchange.metadata.name), exchange.metadata %>
   <% else %>
-    <%= person_link exchange.customer %><%= " paid #{nice_decimal(exchange.amount)} #{exchange.group.unit} for " %><%= link_to h(exchange.metadata.name), exchange.metadata %>
+    <%= person_link exchange.customer %><%= " paid #{nice_decimal(exchange.amount)} #{exchange.group.unit.pluralize} for " %><%= link_to h(exchange.metadata.name), exchange.metadata %>
   <%- end -%>
   </p>
   <p class="meta published">
