--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,5 +1,5 @@
 <li>
-<%= link_to h(category.name), category, {:class => "categoryMenuItem" } %> (<%= category.offers.length %>)
+<%= h(category.name) %> (<%= category.offers.length %>)
   <div>
     <ul>
     <% unless category.children.empty? -%>
