--- a/app/views/reqs/_req_full.html.erb
+++ b/app/views/reqs/_req_full.html.erb
@@ -78,7 +78,7 @@
           </p>
 
           <p>
-            <%= link_to h(@req.name), @req, :class => "show-follow" %> (<%= h nice_decimal(@req.estimated_hours) %> <%= h @req.unit.pluralize %>)
+            <%= link_to h(@req.name), @req, :class => "show-follow" %> (<%= h nice_decimal(@req.estimated_hours) %> <%= h @req.unit&.pluralize %>)
           </p>
         </div>
       </div>
