--- a/app/views/groups/_toolbox.html.erb
+++ b/app/views/groups/_toolbox.html.erb
@@ -25,7 +25,7 @@
         <%- end -%>
       <%- end -%>
     <%- end -%>
-    <%- if @membership %>
+    <%- if @membership && @group.enable_forum? %>
       <li>
         <%= link_to t('home.index.edit_your_preferences'), edit_member_preference_path(@membership.member_preference), :class => "show-follow" %>
       </li>
