remove unused code and fix n+1 queries. related to bace/oscurrency#67

--- a/app/views/groups/_exchanges_canvas.html.erb
+++ b/app/views/groups/_exchanges_canvas.html.erb
@@ -1,7 +1,7 @@
       <h2><%= t('groups.show.community_exchanges') %><%= waiting_image %></h2>
       <%= will_paginate(@exchanges, :params => {:action => :exchanges}, :renderer => BootstrapPaginationHelper::LinkRenderer) %>
       <ul class="list activity full">
-        <%= render :partial => 'exchange', :collection => @exchanges %>
+        <%= render :partial => 'exchange', :collection => @exchanges.includes([:worker,:group,:metadata]) %>
       </ul>
       <div style='clear:both;'></div>
       <%= will_paginate(@exchanges, :params => {:action => :exchanges}, :renderer => BootstrapPaginationHelper::LinkRenderer) %>
