fix https redirection regression from rails 6 upgrade. also update ancient email templates. related to bace/oscurrency#67

--- a/app/views/person_mailer/forum_post_notification.html.erb
+++ b/app/views/person_mailer/forum_post_notification.html.erb
@@ -7,5 +7,5 @@
     <p><%= markdown(@forum_post.body) %></p>
   </div>
 </div>
-<%= render :partial => 'notice', :object =>  link_to("#{t('messages.show.reply')} ","http://#{@server}/groups/#{@forum_post.topic.forum.group.id}") + t('person_mailer.message_notification.click_to_view') %>
+<%= render :partial => 'notice', :object =>  link_to("#{t('messages.show.reply')} ","https://#{@server}/groups/#{@forum_post.topic.forum.group.id}") + t('person_mailer.message_notification.click_to_view') %>
 <%= render :partial => 'footer', :object => @preferences_note %>
