--- a/app/views/person_mailer/forum_post_notification.text.erb
+++ b/app/views/person_mailer/forum_post_notification.text.erb
@@ -2,6 +2,6 @@
 <%= strip_tags(@forum_post.body) %>
 
 
-http://<%= @server %>/groups/<%= @forum_post.topic.forum.group.id %>
+https://<%= @server %>/groups/<%= @forum_post.topic.forum.group.id %>
 
 <%= @preferences_note %>
