--- a/app/views/person_mailer/invitation_notification.html.erb
+++ b/app/views/person_mailer/invitation_notification.html.erb
@@ -1,5 +1,5 @@
 You have a new membership invitation from group <%= @invitation.group.name %>
 
-http://<%= @server %><%= @url %>
+https://<%= @server %><%= @url %>
 
 <%= @preferences_note %>
