--- a/app/views/person_mailer/membership_accepted.html.erb
+++ b/app/views/person_mailer/membership_accepted.html.erb
@@ -1,5 +1,5 @@
 <%= t('person_mailer.membership_accepted.accepted') %> <%= @membership.group.name %>:
 
-http://<%= @server %><%= @url %>
+https://<%= @server %><%= @url %>
 
 <%= @preferences_note %>
