--- a/app/views/person_mailer/membership_request.html.erb
+++ b/app/views/person_mailer/membership_request.html.erb
@@ -2,6 +2,6 @@
 <%= t('person_mailer.membership_request.for_group') %>
 <%= @membership.group.name %>:
 
-http://<%= @server %><%= @url %>
+https://<%= @server %><%= @url %>
 
 <%= @preferences_note %>
