--- a/app/views/person_mailer/message_notification.text.erb
+++ b/app/views/person_mailer/message_notification.text.erb
@@ -2,6 +2,6 @@
 --
 <%= t('person_mailer.message_notification.click_to_view') %> <%= @server %>:
 
-http://<%= @server %>/messages/<%= @message.to_param %>
+https://<%= @server %>/messages/<%= @message.to_param %>
 
 <%= @preferences_note %>
