--- a/app/views/person_mailer/email_verification.text.erb
+++ b/app/views/person_mailer/email_verification.text.erb
@@ -4,6 +4,6 @@
   <%= t('person_mailer.email_verification.message_default') %>
 <% end %>
 
-http://<%= @server_name %>/people/verify/<%= @code %>
+https://<%= @server_name %>/people/verify/<%= @code %>
 
 <%= t('person_mailer.email_verification.thanks') %> 
