--- a/app/views/person_mailer/invitation_accepted.html.erb
+++ b/app/views/person_mailer/invitation_accepted.html.erb
@@ -1,5 +1,5 @@
 <%= @invitation.person.name %> has accepted to join your group <%= @invitation.group.name %>:
 
-http://<%= @server %><%= @url %>
+https://<%= @server %><%= @url %>
 
 <%= @preferences_note %>
