--- a/app/views/person_mailer/membership_public_group.html.erb
+++ b/app/views/person_mailer/membership_public_group.html.erb
@@ -1,6 +1,6 @@
 <%= @membership.person.display_name %> <%= t('person_mailer.membership_public_group.joined') %> 
 <%= @membership.group.name %>:
 
-http://<%= @server %><%= @url %>
+https://<%= @server %><%= @url %>
 
 <%= @preferences_note %>
