--- a/app/views/person_mailer/message_notification.html.erb
+++ b/app/views/person_mailer/message_notification.html.erb
@@ -6,5 +6,5 @@
     <p><%= markdown(@message.content) %></p>
   </div>
 </div>
-<%= render :partial => 'notice', :object =>  link_to("#{t('messages.show.reply')} ","http://#{@server}/messages/#{@message.to_param}") + t('person_mailer.message_notification.click_to_view') %>
+<%= render :partial => 'notice', :object =>  link_to("#{t('messages.show.reply')} ","https://#{@server}/messages/#{@message.to_param}") + t('person_mailer.message_notification.click_to_view') %>
 <%= render :partial => 'footer', :object => @preferences_note %>
